--- a/src/html/cards/card-title.html
+++ b/src/html/cards/card-title.html
@@ -1,8 +1,10 @@
 <div class="drone-stroke">
-	<video {{#if_eq isMobile false}}loop muted{{/if_eq}} style="margin-top:-{{offset}}px"></video>
-	<div class="drone-title">
-		<p><strong>Chapter {{number}}</strong> of 6</p>
-		<h2>{{name}}</h2>
+	<div class="drone-video-container">
+		<video {{#if_eq isMobile false}}loop muted{{/if_eq}} style="margin-top:-{{offset}}px"></video>
+		<div class="drone-title">
+			<p><strong>Chapter {{number}}</strong> of 6</p>
+			<h2>{{name}}</h2>
+		</div>
 	</div>
 </div>
 {{#if isMobile}}
