title card updates

--- a/src/html/cards/card-title.html
+++ b/src/html/cards/card-title.html
@@ -32,7 +32,7 @@
 
 		{{#if isMobile}}
 			{{#if standfirst_mobile}}
-				<h3>{{standfirst}}</h3>
+				<h3>{{standfirst_mobile}}</h3>
 			{{ else }}
 				<h3>{{standfirst}}</h3>
 			{{/if}}
