last header changes

--- a/src/html/base.html
+++ b/src/html/base.html
@@ -27,7 +27,9 @@
 {{else}}
 
 			<div id="blocks-wrapper">
-				<div class="header-image-container"></div>
+				<div class="header-image-container">
+					<div class="header-image"></div>
+				</div>
 				<div id="inner-wrapper">
 					<div id="header-wrapper">
 						
