--- a/src/html/base.html
+++ b/src/html/base.html
@@ -9,7 +9,7 @@
 
 					        <div class="header-inner">
 					            <h1>{{{headline}}}</h1>
-					            <p>{{{standfirst}}}</p>
+					            <p>{{{mobile_standfirst}}}</p>
 					            <div class='gv-header-journey-text'><span class='gv-direction-down'></span><b>Scroll</b> to explore the Mekong region. <br><span class='gv-direction-right'></span><b>Go right</b> to find out more.</div>
 					            {{>shareButtons}}
 					        </div>
