--- a/src/html/cards/card-base-mobile.html
+++ b/src/html/cards/card-base-mobile.html
@@ -1,4 +1,4 @@
- <div class="gv-slide swiper-slide slide-{{card}} {{#if_list_contains_one cards}}slide-single{{/if_list_contains_one}}" data-card-id="{{card}}_{{id}}" style='background-color: {{chapterData.background}};'>
+ <div class="gv-slide swiper-slide slide-{{card}} {{#if_list_contains_one cards}}slide-single{{/if_list_contains_one}}" data-card-id="{{card}}_{{id}}" style='min-width:{{minWidth}}px; background-color: {{chapterData.background}}; '>
 
  	{{#if_eq card "photo"}}
 		{{> photoCard }}
